# Blog-Engine

./: Cargo.toml  README.md  Rocket.toml  package-lock.json  scraper.py
Static/css/: styles.css
Static/js/: scripts.js
env/: pyvenv.cfg
src/: main.rs
templates/: 404.html  404.html.tera  blog.html.tera  category.html.tera  index.html.tera  post.html.tera  posts.html.tera
~/.vscode-root/: .org.chromium.Chromium.P6cHpn  Network Persistent State  TransportSecurity  machineid
~/.vscode-root/Cache/Cache_Data/: 15651df7a7ad0fa5_0  73f800c08c84e67b_0  8282c1d8e011cee4_0  d121e2a6335b7510_0
~/.vscode-root/Cache/Cache_Data/index-dir/: the-real-index
~/.vscode-root/CachedProfilesData/__default__profile__/: extensions.builtin.cache  extensions.user.cache
~/.vscode-root/Code Cache/js/index-dir/: the-real-index
~/.vscode-root/Crashpad/: client_id
~/.vscode-root/DawnGraphiteCache/: data_1  index
~/.vscode-root/DawnWebGPUCache/: data_1  index
~/.vscode-root/GPUCache/: data_0  data_1  data_2  index
~/.vscode-root/Local Storage/leveldb/: LOG
~/.vscode-root/Service Worker/Database/: LOG
~/.vscode-root/Service Worker/ScriptCache/: 2cc80dabc69f58b6_1
~/.vscode-root/Service Worker/ScriptCache/index-dir/: the-real-index
~/.vscode-root/Shared Dictionary/cache/index-dir/: the-real-index
~/.vscode-root/User/History/-2b9e7e5e/: NBkB.rs  smeL.rs
~/.vscode-root/User/History/5e1b1712/: bRkJ.tera
~/.vscode-root/User/globalStorage/: state.vscdb  storage.json
~/.vscode-root/User/workspaceStorage/17f367efe4e88e800b0a9db1415d66e5/: state.vscdb  workspace.json
~/.vscode-root/WebStorage/: QuotaManager
(+12 files in other folders)
