[package]
name = "blog_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"  # Rocket web framework for building web applications
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }  # Tera template engine integration for dynamic HTML
reqwest = { version = "0.11", features = ["blocking", "json"] }  # HTTP client for making requests (blocking and JSON support)
serde = { version = "1.0", features = ["derive"] }  # Serialization and deserialization framework
serde_json = "1.0"  # JSON support for Serde
pulldown-cmark = "0.8"  # Markdown parsing for rendering blog post content
