[package]
name = "blog_engine"
version = "0.1.0"
edition = "2021"

# Dependencies
[dependencies]
rocket = { version = "0.5.1" } # No features required
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] } # Use Tera as your template engine
reqwest = { version = "0.11", features = ["blocking", "json"] }
pulldown-cmark = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
