[package]
name = "blog_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
tera = "1.0.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
pulldown-cmark = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_spanned = "0.6.7"
mio = "0.7.14"
regex = "1.10.0"
tokio = { version = "1", features = ["full"] } # Add this if you plan to use Tokio directly


